--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="ork.liesa.keeptrackLog">
+    package="ork.keeptrackingLog.keeptrackLog">
 
     <application
         android:allowBackup="true"
@@ -15,16 +15,16 @@
         android:theme="@style/Theme.KeeptrackLog"
         tools:targetApi="31">
         <activity
-            android:name=".HomeActivity"
+            android:name="ork.liesa.keeptrackingLog.keeptrackLog.HomeActivity"
             android:exported="false" />
         <activity
-            android:name=".SignUpActivity"
+            android:name="ork.liesa.keeptrackingLog.keeptrackLog.SignUpActivity"
             android:exported="false" />
         <activity
-            android:name=".LogInActivity"
+            android:name="ork.liesa.keeptrackingLog.keeptrackLog.LogInActivity"
             android:exported="false" />
         <activity
-            android:name=".SplashActivity"
+            android:name="ork.liesa.keeptrackingLog.keeptrackLog.SplashActivity"
             android:exported="true"
             android:theme="@style/SplashTheme">
             <intent-filter>
